{
    "name": "InputMap",
    "maps": [
        {
            "name": "Gamepad",
            "id": "13537dd1-2852-4c51-9f1b-2f646ac3427a",
            "actions": [
                {
                    "name": "LeftAnalog",
                    "type": "Value",
                    "id": "fff95085-f59c-4ef2-9eb0-12196b9588fe",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightAnalog",
                    "type": "Value",
                    "id": "d3a4385e-79e3-4d0a-bd75-29beac09d4ec",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DPad",
                    "type": "Value",
                    "id": "40c4cf53-6f8e-42a4-8a5b-61929c30c0cb",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FaceButtonUp",
                    "type": "Button",
                    "id": "dc631d1f-7e98-41dd-9d5a-02cf3601a3e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FaceButtonRight",
                    "type": "Button",
                    "id": "f461fa4d-50d2-449b-9e96-f6a492bee9ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FaceButtonDown",
                    "type": "Button",
                    "id": "b17161e6-1e39-4b4d-a60c-3fe12ccc94b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FaceButtonLeft",
                    "type": "Button",
                    "id": "db43792b-e24c-421e-ae5d-c515bb3e1889",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShoulderLeft",
                    "type": "Button",
                    "id": "31a60d6f-bcbc-4e0d-9294-a75ef0fbece2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShoulderRight",
                    "type": "Button",
                    "id": "e3f7e81e-c411-4171-8d96-a855ae3aca53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerLeft",
                    "type": "Button",
                    "id": "f5d5b4b3-1367-495d-96c0-063b3ca185f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerRight",
                    "type": "Button",
                    "id": "6169b2d6-93c4-4920-9674-f593b458935a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4fada763-8f6a-4611-bd33-4a77e9b2d972",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "Controller",
                    "action": "LeftAnalog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5540d8f5-46d8-484c-8dc5-b7077cf363ea",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FaceButtonUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de412610-4ea4-445c-8fdd-c9d654c7979c",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FaceButtonRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b5245c3-0da4-42df-b6ab-d33c25f28926",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FaceButtonDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c67d302f-b671-4b39-83f2-36d48249b77b",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FaceButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ef67cb5-1e60-47de-9fd2-2fb2b7b6808b",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShoulderLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e78d5cda-7733-4230-b4fc-26aedae55c17",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShoulderRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd1a3d0f-892b-401e-b321-77740353499e",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40768f5b-9cdf-4a06-87e0-69280fb96d71",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "e1685778-fec5-46fc-a321-c0fcdf9e55d7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPad",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "932baade-cd32-44c7-a80f-6ad411bfdacd",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2dbdcb96-575c-437b-a438-1f6fe647936f",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "87d7b72c-a6fc-4b08-bfa7-233a0aaa705a",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9f569c33-0bc9-447f-ad46-f6c5c49ee3c0",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPad",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "008d3a1f-ea8b-43e8-9b86-43e894afabd8",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "Controller",
                    "action": "RightAnalog",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}